Moved json generation for map from index.html to a separate view - mapdata

--- a/zad1/pkw2005/election/templates/index.html
+++ b/zad1/pkw2005/election/templates/index.html
@@ -10,148 +10,10 @@
         <script src="{% static "highmaps.js" %}"></script>
         <script src="{% static "exporting.js" %}"></script>
         <script src= "{% static "map_static.js" %}"> </script>
+        <script src= "{% static "drawmap.js" %}"> </script>
         <script>
             $(function () {
-
-                // Prepare demo data
-                var data = [
-
-                {% for w in wojewodztwa %}
-                    {
-                        "hc-key": "{{w.hckey}}",
-                    {% if w.glosowWaznych > 0 %}
-                        "value": {{w.procKand1}}
-                    {% else %}
-                        "value": null
-                    {% endif %}
-                    },
-                {% endfor %}
-                ];
-
-                // Initiate the chart
-                $('#mapbox').highcharts('Map', {
-
-                    title : {
-                        text : null
-                    },
-
-                    mapNavigation: {
-                        enabled: false,
-                    },
-
-                    colors: [
-                        'rgb(206, 104, 0)',
-                        'rgb(231, 121, 0)',
-                        'rgb(255, 134, 9)',
-                        'rgb(254, 144, 32)',
-                        'rgb(255, 157, 57)',
-                        'rgb(255, 169, 81)',
-                        'rgb(255, 181, 84)',
-                        'rgb(255, 193, 94)',
-                        'rgb(255, 205, 112)',
-                        'rgb(255, 219, 112)',
-                        'rgb(190, 255, 167)',
-                        'rgb(204, 227, 255)',
-                        'rgb(180, 213, 253)',
-                        'rgb(153, 199, 255)',
-                        'rgb(125, 183, 254)',
-                        'rgb(90, 164, 254)',
-                        'rgb(53, 144, 255)',
-                        'rgb(2, 115, 253)',
-                        'rgb(2, 96, 212)',
-                        'rgb(1, 74, 163)',
-                        'rgb(0, 53, 117)',
-                        ],
-
-
-                    tooltip: {
-                        valueSuffix: "%"
-                    },
-                    colorAxis: {
-                        dataClassColor: 'category',
-                        dataClasses: [{
-                            to: 29.57
-                        }, {
-                            from: 29.57,
-                            to: 32.84
-                        }, {
-                            from: 32.84,
-                            to: 34.11
-                        }, {
-                            from: 34.11,
-                            to: 36.38
-                        }, {
-                            from: 36.38,
-                            to: 38.65
-                        }, {
-                            from: 38.65,
-                            to: 40.92
-                        }, {
-                            from: 40.92,
-                            to: 43.19
-                        }, {
-                            from: 43.19,
-                            to: 45.46
-                        }, {
-                            from: 45.46,
-                            to: 47.73
-                        }, {
-                            from:47.73,
-                            to: 49.99
-                        }, {
-                            from: 49.99,
-                            to: 50.01
-                        },  {
-                            from: 50.01,
-                            to: 52.27
-                        },  {
-                            from: 52.27,
-                            to: 54.54
-                        },  {
-                            from: 54.54,
-                            to: 56.81
-                        },  {
-                            from: 56.81,
-                            to: 59.08
-                        },  {
-                            from: 59.08,
-                            to: 61.35
-                        },  {
-                            from: 61.35,
-                            to: 63.62
-                        },  {
-                            from: 63.62,
-                            to: 65.89
-                        },  {
-                            from: 65.89,
-                            to: 68.16
-                        },  {
-                            from: 68.16,
-                            to: 70.43
-                        },  {
-                            from: 70.43
-                        }]
-                    },
-
-                    legend: {
-                        enabled: false
-                    },
-
-                    series : [{
-                        data : data,
-                        mapData: Highcharts.maps['countries/pl/pl-all'],
-                        joinBy: 'hc-key',
-                        name: 'Wynik kandydata nr 1',
-                        states: {
-                            hover: {
-                                borderColor: 'rgb(255,255,0)',
-                                color: null
-                            }
-                        },
-
-
-                    }]
-                });
+                request_drawmap('#mapbox');
             });
         </script>
     </head>
@@ -424,130 +286,10 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel_table">
-                    <p class="font11 miniheader">
-                        Porównanie wyników głosowania na kandydatów
-                    </p>
-                    <table class="font11 statmaintable">
-                        <tr>
-                            <th width=47 rowspan="3">
-                                Nr
-                            </th>
-                            <th rowspan="3">
-                                Nazwa
-                            </th>
-                            <th width=90 rowspan="3">
-                                Liczba głosów ważnych
-                            </th>
-                            <th colspan="2">
-                                {{ kand1Nazwa }}
-                            </th>
-                            <th class="tablerulerhead" width=320 rowspan="3">
-                                Liczba głosów:<br>
-                                na kandydata / ważnych<br>
-                                [%]
-                            </th>
-                            <th colspan="2">
-                                {{ kand2Nazwa }}
-                            </th>
-                        </tr>
-                        <tr>
-                            <th colspan="2">
-                                głosów na kandydata
-                            </th>
-                            <th colspan="2">
-                                głosów na kandydata
-                            </th>
-                        </tr>
-                        <tr>
-                            <th>
-                                liczba
-                            </th>
-                            <th>
-                                %
-                            </th>
-                            <th>
-                                %
-                            </th>
-                            <th>
-                                liczba
-                            </th>
-                        </tr>
-                        {% for w in wojewodztwa %}
-                        <tr>
-                            <td>
-                                {{ w.numer }}
-                            </td>
-                            <td>
-                                {{ w.nazwa }}
-                            </td>
-                            <td>
-                                {{ w.glosowWaznych }}
-                            </td>
-                            <td>
-                                {{ w.glosowKand1 }}
-                            </td>
-                            <td>
-                                {% if w.glosowWaznych > 0 %}
-                                    {{ w.procKand1 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td class="tableruler">
-                                {% if w.glosowWaznych > 0 %}
-                                <div>
-                                    <div style="width: {{ w.procKand1 }}%;">
-                                    </div>
-                                </div>
-                                {% endif %}
-                            </td>
-                            <td>
-                                {% if w.glosowWaznych > 0 %}
-                                    {{ w.procKand2 }}
-                                {% else %}
-                                    --.--
-                                {% endif %}
-                            </td>
-                            <td>
-                                {{ w.glosowKand2 }}
-                            </td>
-                        </tr>
-                        {% endfor %}
-                        <tr>
-                            <th>
-                                Σ
-                            </th>
-                            <th>
-                                Polska
-                            </th>
-                            <th>
-                                {{ razemGlosowWaznych }}
-                            </th>
-                            <th>
-                                {{ kand1g }}
-                            </th>
-                            <th>
-                                {{ kand1p }}
-                            </th>
-                            <th class="tableruler">
-                                {% if razemGlosowWaznych > 0 %}
-                                <div>
-                                    <div style="width: {{ kand1p }}%;">
-                                    </div>
-                                </div>
-                                {% endif %}
-                            </th>
-                            <th>
-                                {{ kand2p }}
-                            </th>
-                            <th>
-                                {{kand2g }}
-                            </th>
-                        </tr>
-                    </table>
+                <div id="tabw" class="panel_table">
+                    {% include "wojewodztwa.html" %}
                 </div>
-                <div class="panel_table">
+                <div id="tabr" class="panel_table">
                     {% include "rodzaje.html" %}
                </div>
             </main>
