--- a/zad1/pkw2005/election/templates/rodzaje.html
+++ b/zad1/pkw2005/election/templates/rodzaje.html
@@ -10,7 +10,7 @@
                                 Liczba głosów ważnych
                             </th>
                             <th colspan="2">
-                                {{ kand1Nazwa }}
+                                {{ kand1.nazwa }}
                             </th>
                             <th class="tablerulerhead" width=320 rowspan="3">
                                 Liczba głosów:<br>
@@ -18,7 +18,7 @@
                                 [%]
                             </th>
                             <th colspan="2">
-                                {{ kand2Nazwa }}
+                                {{ kand2.nazwa }}
                             </th>
                         </tr>
                         <tr>
