--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -256,9 +256,27 @@
         margin-bottom: 30px;
     }
 
+    #seemore {
+        border-collapse: collapse;
+        border-spacing: 0px;
+        width: 100%;
+        background-color: #e7e7de;
+        border: 1px solid #d3d2cd;
+        font-family: Tahoma,Verdana,Helvetica,sans-serif;
+        font-size: 15px;
+    }
+
+    #seemore td {
+        border: 1px solid rgb(211, 210, 205);
+    }
+
+    #seemore th {
+        border: 1px solid;
+        background-color: #fbf8f3;
+        padding: 0px;
+    }
+
     #statbox {
-        border: solid #d3d2cd;
-        border-width: 1px 0px 1px 0px;
         width: 235px;
         height: 293px;
         float: left;
@@ -393,7 +411,6 @@
     header, nav, footer {
         display: none; 
     }
-
 }
 
 
