Proprer editing, proper optimistic locking, autorefresh after change

--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -44,6 +44,15 @@
     .dark{
         background-color: #dedcd0;
     }
+
+    .errorlist {
+        font-size: 12px;
+        color: red;
+        list-style: none;
+        padding: 0px;
+        margin: 5px;
+    }
+
     .font11 {
         font-size: 11px;
     }
@@ -256,7 +265,7 @@
         margin-bottom: 30px;
     }
 
-    #seemore {
+    #seemore, #edittab {
         border-collapse: collapse;
         border-spacing: 0px;
         width: 100%;
@@ -266,11 +275,11 @@
         font-size: 15px;
     }
 
-    #seemore td {
+    #seemore td, #edittab td {
         border: 1px solid rgb(211, 210, 205);
     }
 
-    #seemore th {
+    #seemore th, #edittab th {
         border: 1px solid;
         background-color: #fbf8f3;
         padding: 0px;
