--- a/zad1/pkw2005/election/templates/index.html
+++ b/zad1/pkw2005/election/templates/index.html
@@ -48,10 +48,10 @@
                     </div>
                     <div id="uname" style="float: right;">
                     {% if uname %}
-                        Logged in as {{ uname }}.
-                        <a href="/logout">Log out</a>
+                        Zalogowany jako {{ uname }}.
+                        <a href="/logout/">Wyloguj</a>
                     {% else %}
-                        <a href="/login">Log in</a>
+                        <a href="/login/">Zaloguj</a>
                     {% endif %}
                     </div>
                 </div>
