--- a/zad1/pkw2005/election/templates/registration/login.html
+++ b/zad1/pkw2005/election/templates/registration/login.html
@@ -1,5 +1,14 @@
+{% extends "admin/base.html" %}
+
+{% block breadcrumbs %}
+    <div class="breadcrumbs">
+        <a href="/">Home</a>
+    </div>
+{% endblock %}
+
 {% block content %}
 
+<div id="content-main">
 {% if form.errors %}
 <p>Your username and password didn't match. Please try again.</p>
 {% endif %}
@@ -13,24 +22,24 @@
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
+<form method="post" action="/login/" id="login-form">
 {% csrf_token %}
 <table>
-<tr>
-    <td>{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td>{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
+    <tr class="form-row">
+        <td>{{ form.username.label_tag }}</td>
+        <td>{{ form.username }}</td>
+    </tr>
+    <tr class="form-row">
+        <td>{{ form.password.label_tag }}</td>
+        <td>{{ form.password }}</td>
+    </tr>
 </table>
-
 <input type="submit" value="login" />
 <input type="hidden" name="next" value="/" />
 </form>
 
 {# Assumes you setup the password_reset view in your URLconf #}
 <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+</div>
 
 {% endblock %}
