Finalized porting to a REST server

--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -67,6 +67,10 @@
         background-color: rgb(118, 128, 141);
     }
 
+    .hidden {
+        display: none;
+    }
+
     .lightgreyborder {
         border: 1px solid rgb(128,128,128);   
     }
