--- a/zad1/pkw2005/election/static/style.css
+++ b/zad1/pkw2005/election/static/style.css
@@ -62,6 +62,11 @@
        
     }
 
+    #gederr {
+        font-size: 11px;
+        color: red;
+    }
+
     header {
         height: 130px;
         background-color: rgb(118, 128, 141);
